# fire-controllers

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
docs/: input-board-design.md  output-board-design.md  serial-protocol.md  system-architecture.md
firmware/: Cargo.toml  README.md  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/board-common/: Cargo.toml
firmware/board-common/src/: lib.rs
firmware/hotline-protocol/: Cargo.toml
firmware/hotline-protocol/src/: lib.rs
firmware/input-controller/: Cargo.toml
firmware/input-controller/src/: main.rs
firmware/output-controller/: Cargo.toml
firmware/output-controller/src/: main.rs
hardware/: PCB_APPENDIX_INPUT.md  PCB_APPENDIX_OUTPUT.md  PCB_LAYOUT_GUIDE.md  SCHEMATIC_APPENDIX_INPUT.md  SCHEMATIC_APPENDIX_OUTPUT.md  SCHEMATIC_GUIDE.md
hardware/as-built/: BRINGUP.md  INPUT_BOARD.md  OUTPUT_BOARD.md  PIN_MAP.md  README.md
hardware/as-built/exports/: Netlist_output.asc  PnP_input.csv
hardware/input-board/: bom-jlcpcb.csv
hardware/output-board/: OUTPUT_BOARD_REVIEW.md  bom-jlcpcb.csv
hardware/v1.0.0/: BRINGUP.md  INPUT_BOARD.md  OUTPUT_BOARD.md  PIN_MAP.md  README.md
hardware/v1.0.0/enclosures/: CAD_NOTES.md  CAD_PARTS.md  CAD_VERIFICATION.md  CONNECTOR_RATINGS.md  COST_OPTIONS.md  LED_WINDOW.md  MOUNTING.md  MP_INPUT.md  MP_OUTPUT.md  PANEL_CUTOUTS.md  PARTS_BOM.md  PARTS_REVIEW.md  POWER_OTS.md  README.md  SEALING.md  SHOPPING_LIST.md  SIGN_INPUT.md  SIGN_OUTPUT.md  WIRING.md
hardware/v1.0.0/enclosures/mp-input/: BODY.md  CAD_NOTES.md  LID.md  PARTS_BOM.md  WIRING.md
hardware/v1.0.0/enclosures/mp-output/: BODY.md  CAD_NOTES.md  LID.md  PARTS_BOM.md  WIRING.md
hardware/v1.0.0/enclosures/mp-output-power/: CAD_NOTES.md  PARTS_BOM.md  WIRING.md
hardware/v1.0.0/enclosures/sign-input/: BODY.md  CAD_NOTES.md  LID.md  PARTS_BOM.md  WIRING.md
hardware/v1.0.0/enclosures/sign-output/: BODY.md  CAD_NOTES.md  LID.md  PARTS_BOM.md  WIRING.md
hardware/v1.0.0/enclosures/sign-output-power/: CAD_NOTES.md  PARTS_BOM.md  WIRING.md
hardware/v1.0.0/exports/: BOM_input.csv  BOM_output.csv  Netlist_input.asc
hardware/v1.0.0/input-buttons-pcb/: README.md
hardware/v1.0.0/input-buttons-pcb/exports/: BOM.csv  Netlist.asc  PnP.csv
scripts/: build.sh  dfu-flash-input.sh  dfu-flash-output.sh  flash-input.sh  flash-output.sh  monitor.sh  test.sh
(+46 files in other folders)
