[package]
name = "board-common"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
description = "Shared STM32G0B1 board bring-up helpers for fire controllers"

[lib]
test = false
bench = false

[dependencies]
embassy-stm32 = { version = "0.6.0", features = ["stm32g0b1cb", "time-driver-any", "memory-x", "unstable-pac", "exti"] }
